// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshot > displays with search button 1`] = `
<DocumentFragment>
  <div
    class="sc-dItHI fUOhmQ aje-input__search is-medium"
  >
    <label
      class="sc-fujznN cKa-DUc"
      for="react-aria-:r5:"
      id="react-aria-:r6:"
    >
      search
    </label>
    <div
      class="sc-iqAbyq jxUoiQ"
    >
      <input
        aria-labelledby="react-aria-:r6:"
        class="sc-kEqXeH LVqat"
        id="react-aria-:r5:"
        type="search"
        value=""
      />
      <button
        class="sc-gKAaef sc-iCoHzw bcVLIb kJUKHc aje-btn aje-btn--icon aje-btn--content"
        data-focus-visible="false"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-jSFipO eeJbpe material-icons is-medium"
        >
          search
        </i>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot > displays without button 1`] = `
<DocumentFragment>
  <div
    class="sc-dItHI fUOhmQ aje-input__search is-medium"
  >
    <label
      class="sc-fujznN cKa-DUc"
      for="react-aria-:r0:"
      id="react-aria-:r1:"
    >
      search
    </label>
    <div
      class="sc-iqAbyq jxUoiQ"
    >
      <input
        aria-labelledby="react-aria-:r1:"
        class="sc-kEqXeH LVqat"
        id="react-aria-:r0:"
        type="search"
        value=""
      />
      <button
        class="sc-gKAaef sc-iCoHzw bcVLIb kJUKHc aje-btn aje-btn--icon aje-btn--content"
        data-focus-visible="false"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-jSFipO eeJbpe material-icons is-medium"
        >
          search
        </i>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
